# cop-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
cop/: Cargo.toml
cop/src/: app.rs  args.rs  change.rs  clause.rs  colosseum.rs  ctx_iter.rs  database.rs  equality.rs  fof.rs  lib.rs  literal.rs  litmat.rs  matrix.rs  offset.rs  ptr.rs  putrewind.rs  rewind.rs  role.rs  signed.rs  stackback.rs  subst.rs  symbol.rs  szs.rs  term.rs  tptp.rs  vecback.rs
cop/src/lean/: clause.rs  context.rs  contrapositive.rs  cuts.rs  database.rs  matrix.rs  mod.rs  proof.rs  search.rs  stats.rs  steps.rs
cop/src/nano/: clause.rs  contrapositive.rs  litmat.rs  matrix.rs  mod.rs  positive.rs  proof.rs  search.rs
cop/tests/: tests.rs
eval/: .gitignore  Makefile  README.md  bushy-1s.mk  bushy.mk  chainy-1s.mk  chainy.mk  cop.mk  flyspeck.mk  join.mk  miz40.mk  solved.mk  tar.mk  tptp.mk
eval/i/: flyspeck.mk  miz40.mk  miz40.tar.bz2.sha512  mptp2078.mk  tptp.mk
eval/json/: proofs.sh
eval/markdown/: ratio-infs-avg.sh  ratio-infs.sh  ratio-problems.sh  ratio-proofs.sh  solved-union.sh  solved.sh
eval/plot/: bushy-times.sh
leancop/: Cargo.toml
leancop/src/: main.rs
meancop/: Cargo.toml
meancop/src/: cli.rs  error.rs  lib.rs  main.rs  parse.rs  preprocess.rs
problems/: cnf.p  eq.p  ijcar16ex.p  neg_conj.p  shadow.p  shallowcut.p  skolem.p  sokrates.p  tab11ex.p
problems/CSAT/: subst2.p
problems/KO/: arity_mismatch.p  incomplete.p  malformed.p  missing_include.p
src/: app.rs  args.rs  backtrackstack.rs  change.rs  equality.rs  fof.rs  lib.rs  list.rs  literal.rs  main.rs  offset.rs  rest_iter.rs  role.rs  signed.rs  skipper.rs  subst.rs  symbol.rs  szs.rs  term.rs
src/lean/: clause.rs  context.rs  contrapositive.rs  database.rs  matrix.rs  mod.rs  proof.rs  search.rs  task.rs
