[package]
name = "cop-rs"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cop"
path = "src/lib.rs"

[[bin]]
name = "cop"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
colosseum = "0.2"
env_logger = "0.7"
itertools = "0.9"
log = "0.4"
num-bigint = "0.3"
num-traits = "0.2"
tptp = "0.26"
