[package]
name = "cop"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"
description = "Highly efficient first-order connection proving"
readme = "../README.md"
repository = "https://github.com/01mf02/cop-rs"
license = "GPL-3.0-only"
keywords = ["first-order", "logic", "prover"]
categories = ["no-std", "science"]

[features]
default = ["serde"]

[dependencies]
colosseum = "0.2"
hashbrown = "0.9"
log = "0.4"
num-bigint = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
tptp = "0.28"
