[package]
name = "cop"
version = "0.2.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"
description = "Highly efficient first-order connection proving"
readme = "../README.md"
repository = "https://github.com/01mf02/cop-rs"
license = "GPL-3.0-only"
keywords = ["first-order", "logic", "prover"]
categories = ["no-std", "science"]
rust-version = "1.62"

[features]
default = ["colosseum", "serde", "tptp"]

[dependencies]
colosseum = { version = "0.2.2", optional = true }
hashbrown = "0.9.1"
log = "0.4.17"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = { version = "1.0.137", features = ["derive"], optional = true }
tptp = { version = "0.31.1", optional = true }
