[package]
name = "meancop"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"
description = "More efficient, albeit non-lean connection prover"
readme = "../README.md"
repository = "https://github.com/01mf02/cop-rs"
license = "GPL-3.0-only"
keywords = ["first-order", "logic", "prover"]
categories = ["no-std", "science", "command-line-utilities"]

[dependencies]
cop = { version = "0.1", path = "../cop" }
clap = "3.0.0-beta.2"
colosseum = "0.2"
env_logger = "0.7"
log = "0.4"
serde_json = "1.0"
tptp = "0.28"
